fix(@vtmn/css): select wrap property (#1202)
* add onClear prop call for when clear icon clicked

* Revert "add onClear prop call for when clear icon clicked"

This reverts commit 70c926bbe6c43dafae6ae896de2999a3abd2a5ea.

* fix: add nowrap css

* fix(@vtmn/css): apply linters

--- a/packages/sources/css/src/components/forms/select/src/index.css
+++ b/packages/sources/css/src/components/forms/select/src/index.css
@@ -13,6 +13,7 @@
   line-height: var(--vtmn-typo_text-2-line-height);
   color: var(--vtmn-semantic-color_content-primary);
   inline-size: min-content;
+  white-space: nowrap;
 }
 
 .vtmn-select_container > label {
